# ArchiveCollegeProjects-TuringMachine

./: CMakeLists.txt  README.md
src/: EndlessTape.cpp  Program.cpp
